--- a/MovieQuiz/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/MovieQuiz/Resources/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Dcl-FU-JMO">
+                                <rect key="frame" x="-189" y="0.0" width="789" height="906"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Dcl-FU-JMO" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" constant="186" id="Rgj-oB-9og"/>
+                            <constraint firstItem="Dcl-FU-JMO" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" constant="10" id="Uo2-hS-6am"/>
+                            <constraint firstAttribute="top" secondItem="Dcl-FU-JMO" secondAttribute="top" id="fq6-Ef-Wjx"/>
+                            <constraint firstAttribute="leading" secondItem="Dcl-FU-JMO" secondAttribute="leading" constant="189" id="q47-Bl-vfw"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchScreen" width="1125" height="2436"/>
+    </resources>
 </document>
